# axum-server

./: .env.example  .gitignore  API_DOCS.md  Cargo.toml  README.md  chatmode.md  docker-compose.kafka.yml  docker-compose.simple.yml  postman_collection.json
.github/: copilot-instructions.md
.github/chatmodes/: custom.chatmode.md
migrations/: 001_init.sql  002_users.sql  003_categories.sql  004_tags_and_features.sql
scripts/: create_todo.sh  test_api.sh  todo_client.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/handlers/: batch.rs  categories.rs  mod.rs  stats.rs  tags.rs  users.rs
src/kafka/: config.rs  consumer.rs  events.rs  mod.rs  producer.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs
src/routes/: mod.rs
tests/: health_check.rs  todos_api.rs
